# ConsoleGameEngine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Doxyfile  EngineOnlyMode.cmake  README.md  RebuildAndRun.sh
CMake/: DownloadGoogleTest.cmake  EngineOnlyMode copy.cmake  EngineOnlyMode.cmake  LoggingEnabled.cmake
Scripts/: Gui.py  RebuildAndRun.sh
Source/: CMakeLists.txt  DownloadGoogleTest.cmake  RebuildAndRun.sh
Source/Engine/: CmakeLists.txt
Source/Engine/Core/: CMakeLists.txt  Game.cpp  GameEntity.cpp  GameEntity.hpp  GameLogger.hpp  GameLoop.cpp  GameLoop.hpp  IGame.cpp  IGame.hpp
Source/Engine/Core/Main/: CMakeLists.txt  main.cpp
Source/Engine/Core/Main/EngineOnlyMode/: DummyGame.cmake  DummyGame.cpp  DummyGame.hpp
Source/Engine/Game/: AbstractGame.cpp  AbstractGame.hpp  CMakeLists.txt  main.cpp
Source/Engine/Main/: CMakeLists.txt  TestGame.cmake  TestGame.cpp  TestGame.hpp  main.cpp
Source/Engine/StateMachine/: AbstractEvent.cpp  AbstractEvent.hpp  AbstractState.cpp  AbstractState.hpp  CMakeLists.txt  Context.cpp  Context.hpp  InitState.cpp  InitState.hpp  StateMachine.cpp  StateMachine.hpp
Source/Game/: CmakeLists.txt
Source/Game/StateMachine/: AbstractEvent.cpp  AbstractEvent.hpp  AbstractState.cpp  AbstractState.hpp  InitState.cpp  InitState.hpp  StateMachine.cpp  StateMachine.hpp
Source/IntegralMath/: CMakeLists.txt
Source/IntegralMath/Fraction/: CMakeLists.txt  Fraction.cpp  Fraction.hpp
Source/IntegralMath/Fraction/Test/: CMakeLists.txt  testExceptionAccuracy.cpp  testReduction.cpp
Source/IntegralMath/IntegerInfo/: CMakeLists.txt  IntegerInfo.cpp  IntegerInfo.hpp
Source/IntegralMath/IntegralFunctions/: CMakeLists.txt  IntegralFunctions.cpp  IntegralFunctions.hpp
Source/IntegralMath/OverflowDetector/: CMakeLists.txt  OverflowDetector.cpp  OverflowDetector.hpp
Source/IntegralMath/PointerLogic/: CMakeLists.txt  PointerLogic.hpp
Source/Mathematic/: CMakeLists.txt  Mathematic.cpp  Mathematic.hpp  Rational.cpp  Rational.hpp
Source/RandomDistribution/: CMakeLists.txt
Source/RandomDistribution/CatagoricalDistribution/: CMakeLists.txt  CatagoricalDistribution.hpp  CatagoricalDistribution.inl  Catagory.hpp
Source/RandomDistribution/CatagoricalDistribution/Test/: CMakeLists.txt  TestCatagoricalDistribution.cpp
Source/RandomDistribution/Distributions/: AbstractDist.hpp  CMakeLists.txt  DiscreteDist.cpp  DiscreteDist.hpp  UniformDist.hpp
Source/RandomDistribution/UUID-Gen/: UuidGenerator.hpp
Source/Serial/: CMakeLists.txt
Source/Serial/Serializer/: CMakeLists.txt  ObjectFactory.cpp  ObjectFactory.hpp  Serializer.hpp
Source/UserInterface/: AbstractScreen.hpp  CMakeLists.txt
Source/UserInterface/Screen/: CMakeLists.txt  Screen.cpp  Screen.hpp
Source/UserInterface/ScreenInfo/: CMakeLists.txt  ScreenInfo.cpp  ScreenInfo.hpp
