
CMAKE_MINIMUM_REQUIRED(VERSION 3.12 FATAL_ERROR)

PROJECT("ConsoleGameEngine" VERSION 1.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 11)

INCLUDE(CTest)

INCLUDE(DownloadGoogleTest.cmake)

if(CMAKE_COMPILER_IS_GNUCC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
endif()
if(MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(IntegralMath)
ADD_SUBDIRECTORY(UserInterface)
ADD_SUBDIRECTORY(Engine)
