
SET(EXENAME Game)

SET(SOURCES main.cpp)

ADD_EXECUTABLE(${EXENAME} ${SOURCES})

MESSAGE(${CMAKE_SOURCE_DIR})

TARGET_INCLUDE_DIRECTORIES(${EXENAME} PUBLIC 
						   ${PROJECT_SOURCE_DIR}/Source/Engine/Game 
						   ${PROJECT_SOURCE_DIR}/Source/IntegralMath/PointerLogic 
						   ${CMAKE_SOURCE_DIR}/Source/ConsoleGame)

TARGET_LINK_LIBRARIES(${EXENAME} AbstractGame PointerLogic ConsoleGame)

ADD_SUBDIRECTORY(Test)
