
SET(EXENAME Game)

SET(SOURCES main.cpp)

ADD_EXECUTABLE(${EXENAME} ${SOURCES})


IF (NOT ENGINE_ONLY_MODE)
    TARGET_INCLUDE_DIRECTORIES(${EXENAME} PUBLIC ${PROJECT_SOURCE_DIR}/Source/Engine/Core)
    TARGET_LINK_LIBRARIES(${EXENAME} IGame)
ELSE()
    INCLUDE(TestGame.cmake)
    TARGET_LINK_LIBRARIES(${EXENAME} TestGame)
ENDIF()


ADD_SUBDIRECTORY(Test)
